k8s-monitoring/preprod/manifests/grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: alloy-otlp-grpc-route
  namespace: k8s-monitoring
spec:
  parentRefs:
    - name: traefik-gateway 
      namespace: traefik    
      sectionName: web
      
  hostnames:
    - otlp.dyingstar-game.space
  rules:
    - backendRefs:
        - name: k8s-monitoring-receiver-ext
          port: 4317
